@@ -1,9 +1,0 @@
-sudo dnf install zlib
-sudo dnf install zlib-static
-sudo dnf install openssl-devel
-sudo dnf install boost-devel
-sudo dnf install cairo-devel libpcap-devel
-sudo dnl install emacs
-sudo dnf install emacs
-sudo dnf install libpcap-devel
-sudo dnf install cairo-devel
