@@ -1,3 +1,9 @@
+2017-07-12 Simson Garfinkel <simsong@acm.org>
+	* updated to work with Fedora 26 compilers
+	* Found bug in sbuf.cpp
+	* Fixed C++ warnings in hash
+	* Now works with OpenSSL 1.1.0f-fips  25 May 2017
+
 2014-02-24  Man Page  <simsong@mncrnpsedu.local>
 
 	* src/tcpflow.cpp (main): alternating color output option changed from -J to -g
